# quickdbclient

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
.github/workflows/: release.yml
quickdbclient/: __init__.py  database.py  utils.py
quickdbclient/oracle/: __init__.py  database.py  ddl.py
quickdbclient/oracle/sql/ddl/: all_objects.sql  object.sql  table.sql
