[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "quickdbclient"
version = "0.1.0"
authors = [{ name = "cvisinoni" }]
description = "A simple database connector library for Python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "oracledb>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/cvisinoni/quickdbclient"
Issues = "https://github.com/cvisinoni/quickdbclient/issues"

[tool.hatch.build]
exclude = ["tests/**", "*.pyc", ".github/**", '/example.py']
